# store

./: .gitignore  Cargo.toml  NOTICE  README.md  TODO.md  log_bridge.template.js  sw.template.js
.github/: copilot-instructions.md
src/: indexed_db.rs  lib.rs  local_storage.rs
src/i18n/: english.rs  french.rs  german.rs  hungarian.rs  mod.rs  spanish.rs
