[package]
name = "zsozso-store"
version = "0.1.0"
edition = "2024"

[dependencies]
zsozso-common = { git = "ssh://git@github.com/ifinta/zsozso-common.git" }
rexie = "0.6"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["Window", "Storage", "console"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
